--- a/taskana-camunda-adapter-sample/src/main/resources/application.properties
+++ b/taskana-camunda-adapter-sample/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Set camunda hosts
 taskana-camunda-camundasystemconnector.camundaSystemURLs=http://localhost:8080/engine-rest
-logging.level.org.springframework=DEBUG
-logging.level.pro.taskana=DEBUG
+# logging.level.org.springframework=DEBUG
+# logging.level.pro.taskana=DEBUG
 # Set Server Port
 server.port = 8081
 spring.h2.console.enabled = true
