--- a/taskana-camunda-adapter-sample/pom.xml
+++ b/taskana-camunda-adapter-sample/pom.xml
@@ -5,7 +5,7 @@
 
         <groupId>pro.taskana</groupId>
         <artifactId>taskana-camunda-adapter-sample</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
         <packaging>jar</packaging>
 
         <name>taskana-camunda-adapter-sample</name>
@@ -40,27 +40,54 @@
                 <dependency>
                         <groupId>pro.taskana</groupId>
                         <artifactId>taskana-camunda-adapter</artifactId>
-                        <version>0.0.1-SNAPSHOT</version>
+                        <version>0.0.1</version>
                 </dependency>
                 <dependency>
                         <groupId>pro.taskana</groupId>
                         <artifactId>taskana-camunda-system-connector</artifactId>
-                        <version>0.0.1-SNAPSHOT</version>
+                        <version>0.0.1</version>
                 </dependency>
                 <dependency>
                         <groupId>pro.taskana</groupId>
                         <artifactId>taskana-taskana-system-connector</artifactId>
-                        <version>0.0.1-SNAPSHOT</version>
+                        <version>0.0.1</version>
                 </dependency>
-               
+
+                <dependency>
+                   <groupId>com.ibm.db2.jcc</groupId>
+                   <artifactId>db2jcc4</artifactId>
+                   <version>11.1.1.1</version>
+                </dependency>
         </dependencies>
 
         <build>
                 <plugins>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <version>3.5.1</version>
+                                <configuration>
+                                        <showWarnings>true</showWarnings>
+                                        <debug>true</debug>
+                                        <compilerArgs>
+                                                <arg>-Xlint:all</arg>
+                                        </compilerArgs>
+                                </configuration>
+                        </plugin>
                         <plugin>
                                 <groupId>org.springframework.boot</groupId>
                                 <artifactId>spring-boot-maven-plugin</artifactId>
                         </plugin>
                 </plugins>
         </build>
+        <!--
+          this repository is needed to fetch com.ibm.db2.jcc
+        -->
+        <repositories>
+                <repository>
+                        <id>novatec public</id>
+                        <name>novatec-repository</name>
+                        <url>https://repository.novatec-gmbh.de/content/repositories/novatec/</url>
+                </repository>
+        </repositories>
 </project>
