--- a/taskana-camunda-adapter-sample/src/main/resources/application.properties
+++ b/taskana-camunda-adapter-sample/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 # Set camunda hosts
 taskana-camunda-camundasystemconnector.camundaSystemURLs=http://localhost:8080/engine-rest
 # logging.level.org.springframework=DEBUG
-# logging.level.pro.taskana=DEBUG
+logging.level.pro.taskana=DEBUG
+logging.level.com.spring.ibatis=DEBUG
+logging.level.com.spring.ibatis.*=DEBUG
+logging.level.org.apache.org.apache.ibatis=DEBUG
 # Set Server Port
 server.port = 8081
 spring.h2.console.enabled = true
@@ -14,9 +17,13 @@ taskana.classification.categories = EXTERNAL , MANUAL , AUTOMATIC , PROCESS
 
 # Configue the dataource for Taskana DB
 # datasource.url = jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
-datasource.url=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
-datasource.driverClassName = org.h2.Driver
-datasource.username = sa
-datasource.password = sa
+# datasource.url=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
+# datasource.driverClassName = org.h2.Driver
+# datasource.username = sa
+# datasource.password = sa
+datasource.url=jdbc:db2://localhost:50050/taskana
+datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
+datasource.username=db2user
+datasource.password=Db2password
 
 taskana.schemaName=TASKANA
