--- a/taskana-camunda-system-connector/pom.xml
+++ b/taskana-camunda-system-connector/pom.xml
@@ -5,7 +5,7 @@
 
         <groupId>pro.taskana</groupId>
         <artifactId>taskana-camunda-system-connector</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
         <packaging>jar</packaging>
 
         <name>taskana-camunda-system-connector</name>
@@ -49,13 +49,13 @@
               <dependency>
                    <groupId>pro.taskana</groupId>
                    <artifactId>taskana-spring</artifactId>
-                   <version>1.0.2</version>
+                   <version>1.0.6-SNAPSHOT</version>
               </dependency>
 
               <dependency>
                    <groupId>pro.taskana</groupId>
                    <artifactId>taskana-camunda-adapter</artifactId>
-                   <version>0.0.1-SNAPSHOT</version>
+                   <version>0.0.1</version>
               </dependency>
 
               <dependency>
@@ -69,6 +69,18 @@
         <!--
         <build>
                 <plugins>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <version>3.5.1</version>
+                                <configuration>
+                                        <showWarnings>true</showWarnings>
+                                        <debug>true</debug>
+                                        <compilerArgs>
+                                                <arg>-Xlint:all</arg>
+                                        </compilerArgs>
+                                </configuration>
+                        </plugin>
                         <plugin>
                                 <groupId>org.springframework.boot</groupId>
                                 <artifactId>spring-boot-maven-plugin</artifactId>
