--- a/taskana-camunda-system-connector/src/main/resources/application.properties
+++ b/taskana-camunda-system-connector/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 taskana-camunda-camundasystemconnector.camundaSystemURLs=http://localhost:8080/engine-rest
 
+logging.level.pro.taskana=DEBUG
+logging.level.com.spring.ibatis=DEBUG
+logging.level.com.spring.ibatis.*=DEBUG
+logging.level.org.apache.org.apache.ibatis=DEBUG
