--- a/taskana-camunda-adapter-sample/src/main/resources/application.properties
+++ b/taskana-camunda-adapter-sample/src/main/resources/application.properties
@@ -28,3 +28,10 @@ datasource.password=Db2password
 
 taskana.schemaName=TASKANA
 taskanaCamundaAdapter.schemaName=TCA
+
+taskanaCamundaAdapter.scheduler.run.interval.for.cleanup.tasks.cron=* * * * * *
+taskanaCamundaAdapter.scheduler.task.age.for.cleanup.in.hours=10
+taskanaCamundaAdapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
+taskanaCamundaAdapter.scheduler.run.interval.for.complete.camunda.tasks.in.milliseconds=10000
+taskanaCamundaAdapter.scheduler.run.interval.for.check.completed.camunda.tasks.in.milliseconds=10000
+
