--- a/taskana-camunda-system-connector/pom.xml
+++ b/taskana-camunda-system-connector/pom.xml
@@ -64,6 +64,12 @@
                   <version>1.3.2</version>
               </dependency>
 
+             <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-test</artifactId>
+                  <scope>test</scope>
+              </dependency>
+
         </dependencies>
 
         <!--
@@ -87,6 +93,6 @@
                         </plugin>
                 </plugins>
         </build>
-         -->
+        -->
 
 </project>
