--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -4,7 +4,7 @@ taskana-camunda-camundasystemconnector.camundaSystemURLs=http://localhost:8080/e
 logging.level.pro.taskana=DEBUG
 logging.level.com.spring.ibatis=DEBUG
 logging.level.com.spring.ibatis.*=DEBUG
-logging.level.org.apache.org.apache.ibatis=DEBUG
+logging.level.org.apache.ibatis=DEBUG
 # Set Server Port
 server.port = 8081
 spring.h2.console.enabled = true
@@ -29,8 +29,10 @@ datasource.password=Db2password
 taskana.schemaName=TASKANA
 taskanaAdapter.schemaName=TCA
 
-taskanaAdapter.scheduler.run.interval.for.cleanup.tasks.cron=* * * * * *
+taskanaAdapter.total.transaction.lifetime.in.seconds = 120
+taskanaAdapter.scheduler.run.interval.for.cleanup.tasks.cron=0 0/10 * * * *
 taskanaAdapter.scheduler.task.age.for.cleanup.in.hours=10
+
 taskanaAdapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskanaAdapter.scheduler.run.interval.for.complete.general.tasks.in.milliseconds=10000
 taskanaAdapter.scheduler.run.interval.for.check.cancelled.general.tasks.in.milliseconds=10000
