--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Set camunda hosts
 taskana-camunda-camundasystemconnector.camundaSystemURLs=http://localhost:8080/engine-rest
 # logging.level.org.springframework=DEBUG
-logging.level.pro.taskana=DEBUG
+logging.level.pro.taskana=TRACE
 logging.level.com.spring.ibatis=DEBUG
 logging.level.com.spring.ibatis.*=DEBUG
 logging.level.org.apache.ibatis=DEBUG
