rebase to taskana version 1.0.8-SNAPSHOT, correct transaction handling

--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Set camunda hosts
 taskana-camunda-camundasystemconnector.camundaSystemURLs=http://localhost:8080/engine-rest
-# logging.level.org.springframework=DEBUG
-logging.level.pro.taskana=TRACE
+logging.level.org.springframework=DEBUG
+logging.level.pro.taskana=DEBUG
 logging.level.com.spring.ibatis=DEBUG
 logging.level.com.spring.ibatis.*=DEBUG
 logging.level.org.apache.ibatis=DEBUG
@@ -21,13 +21,18 @@ taskana.classification.categories = EXTERNAL , MANUAL , AUTOMATIC , PROCESS
 # datasource.driverClassName = org.h2.Driver
 # datasource.username = sa
 # datasource.password = sa
-datasource.url=jdbc:db2://localhost:50050/taskana
-datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
-datasource.username=db2user
-datasource.password=Db2password
+#  datasource.url=jdbc:db2://localhost:50050/taskana
+#  datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
+#  datasource.username=db2user
+#  datasource.password=Db2password
 
+datasource.url=jdbc:postgresql://localhost:50102/postgres
+datasource.driverClassName=org.postgresql.Driver
+datasource.username=postgres
+datasource.password=postgres
 taskana.schemaName=TASKANA
 taskanaAdapter.schemaName=TCA
+
 
 taskanaAdapter.total.transaction.lifetime.in.seconds = 120
 taskanaAdapter.scheduler.run.interval.for.cleanup.tasks.cron=0 0/10 * * * *
