--- a/taskana-adapter-sample/pom.xml
+++ b/taskana-adapter-sample/pom.xml
@@ -58,6 +58,12 @@
                    <artifactId>db2jcc4</artifactId>
                    <version>11.1.1.1</version>
                 </dependency>
+
+                <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>42.2.5</version>
+                </dependency>
         </dependencies>
 
         <build>
