Adapt to changed handling of lowercase schema name and remove last references to general task

--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-#####################################################################################
-# Adapter properties
-#
-logging.level.org.springframework=DEBUG
-logging.level.pro.taskana=DEBUG
-logging.level.com.spring.ibatis=DEBUG
-logging.level.com.spring.ibatis.*=DEBUG
-logging.level.org.apache.ibatis=DEBUG
-# Set Server Port for Adapter
+######################################################################################
+## Adapter properties
+##
+#logging.level.org.springframework=DEBUG
+#logging.level.pro.taskana=DEBUG
+#logging.level.com.spring.ibatis=DEBUG
+#logging.level.com.spring.ibatis.*=DEBUG
+#logging.level.org.apache.ibatis=DEBUG
+## Set Server Port for Adapter
 server.port = 8081
 spring.h2.console.enabled = true
 spring.h2.console.path=/h2
@@ -35,8 +35,8 @@ taskana.adapter.scheduler.run.interval.for.cleanup.tasks.cron=0 0/10 * * * *
 taskana.adapter.scheduler.task.age.for.cleanup.in.hours=10
 
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
-taskana.adapter.scheduler.run.interval.for.complete.general.tasks.in.milliseconds=10000
-taskana.adapter.scheduler.run.interval.for.check.cancelled.general.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.milliseconds=10000
 
 ####################################################################################
 # System connector properties
