--- a/taskana-adapter-sample/pom.xml
+++ b/taskana-adapter-sample/pom.xml
@@ -5,7 +5,7 @@
 
         <groupId>pro.taskana</groupId>
         <artifactId>taskana-adapter-sample</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.1-SNAPSHOT</version>
         <packaging>jar</packaging>
 
         <name>taskana-adapter-sample</name>
@@ -30,6 +30,11 @@
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-web</artifactId>
                 </dependency>
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-configuration-processor</artifactId>
+					<optional>true</optional>
+				</dependency>
 
                 <dependency>
                         <groupId>org.springframework.boot</groupId>
