--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
         <modelVersion>4.0.0</modelVersion>
         <groupId>pro.taskana</groupId>
         <artifactId>taskana-adapter-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.1-SNAPSHOT</version>
         <packaging>pom</packaging>
 
         <description>This pom is parent to all taskana-camunda-adapter modules and serves the common build.</description>
