--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -7,23 +7,24 @@
 #logging.level.com.spring.ibatis.*=DEBUG
 #logging.level.org.apache.ibatis=DEBUG
 ## Set Server Port for Adapter
+
+logging.level.pro.taskana=info
+
 server.port = 8081
-spring.h2.console.enabled = true
-spring.h2.console.path=/h2
 
 # Configue the dataource for taskana.adapter DB
-# taskana.adapter.datasource.url = jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
-# taskana.adapter.datasource.url=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
+# taskana.adapter.datasource.jdbcUrl= jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
+# taskana.adapter.datasource.jdbcUrl=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
 # taskana.adapter.datasource.driverClassName = org.h2.Driver
 # taskana.adapter.datasource.username = sa
 # taskana.adapter.datasource.password = sa
 #
-# taskana.adapter.datasource.url=jdbc:db2://localhost:50050/taskana
+# taskana.adapter.datasource.jdbcUrl=jdbc:db2://localhost:50050/taskana
 # taskana.adapter.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
 # taskana.adapter.datasource.username=db2user
 # taskana.adapter.datasource.password=Db2password
 
-taskana.adapter.datasource.url=jdbc:postgresql://localhost:50102/postgres
+taskana.adapter.datasource.jdbcUrl=jdbc:postgresql://localhost:50102/postgres
 taskana.adapter.datasource.driverClassName=org.postgresql.Driver
 taskana.adapter.datasource.username=postgres
 taskana.adapter.datasource.password=postgres
@@ -47,27 +48,20 @@ taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest
 ####################################################################################
 # taskana-connector propertiew
 #
-# Predefine domains, classification typse and classification categories
-taskana.domains = Domain_A , Domain_B
-taskana.classification.types = TASK , DOCUMENT
-taskana.classification.categories = EXTERNAL , MANUAL , AUTOMATIC , PROCESS
-
 # Configue the dataource for Taskana DB (used by taskana-connector
-# taskana.datasource.url = jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
-# taskana.datasource.url=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
+# taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
+# taskana.datasource.jdbcUrl=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
 # taskana.datasource.driverClassName = org.h2.Driver
 # taskana.datasource.username = sa
 # taskana.datasource.password = sa
 #
-# taskana.datasource.url=jdbc:db2://localhost:50050/taskana
+# taskana.datasource.jdbcUrl=jdbc:db2://localhost:50050/taskana
 # taskana.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
 # taskana.datasource.username=db2user
 # taskana.datasource.password=Db2password
 
-taskana.datasource.url=jdbc:postgresql://localhost:50102/postgres
+taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:50102/postgres
 taskana.datasource.driverClassName=org.postgresql.Driver
 taskana.datasource.username=postgres
 taskana.datasource.password=postgres
 taskana.schemaName=TASKANA
-
-taskana.generateSampleData=false
