--- a/taskana-adapter-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-wildfly-example/src/main/resources/application.properties
@@ -2,16 +2,21 @@
 ######################################################################################
 ## Logging properties
 ######################################################################################
-logging.level.org.springframework=DEBUG
-logging.level.pro.taskana=DEBUG
-logging.level.com.spring.ibatis=DEBUG
-logging.level.com.spring.ibatis.*=DEBUG
-logging.level.org.apache.ibatis=DEBUG
+# logging.level.org.springframework=DEBUG
+# logging.level.pro.taskana=DEBUG
+# logging.level.pro.taskana.adapter=DEBUG
+# logging.level.pro.taskana.adapter.*=DEBUG
+# logging.level.com.spring.ibatis=DEBUG
+# logging.level.com.spring.ibatis.*=DEBUG
+# logging.level.org.apache.ibatis=DEBUG
+
+
+logging.level.pro.taskana=INFO
 
 ######################################################################################
 ## Adapter properties
 ######################################################################################
-taskana.adapter.datasource.jndi=java:/TaskanaAdapterDS
+taskana.adapter.datasource.jndi-name=java:/TaskanaAdapterDS
 taskana.adapter.schemaName=TCA
 
 taskana.adapter.total.transaction.lifetime.in.seconds = 120
@@ -37,12 +42,9 @@ taskana.jobs.cleanup.runEvery=P1D
 taskana.jobs.cleanup.firstRunAt=2018-07-25T08:00:00Z
 taskana.jobs.cleanup.minimumAge=P14D
 
-taskana.generateSampleData=false
-datasource.jndi=java:/TaskanaDS
+taskana.datasource.jndi-name=java:/TaskanaDS
+
 ####### cache static resources properties
 spring.resources.cache.cachecontrol.cache-private=true
-####### tomcat is not detecting the x-forward headers from bluemix as a trustworthy proxy
-server.tomcat.internal-proxies=.*
-server.use-forward-headers=true
 
 taskana.schemaName=TASKANA
