--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -43,7 +43,16 @@
                   <groupId>org.springframework.boot</groupId>
                   <artifactId>spring-boot-starter-jdbc</artifactId>
               </dependency>
+              <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-configuration-processor</artifactId>
+              </dependency>
 
+              <dependency>
+              <groupId>org.springframework.data</groupId>
+                  <artifactId>spring-data-commons</artifactId>
+                  <version>1.12.2.RELEASE</version>
+              </dependency>
               <dependency>
                   <groupId>org.springframework.boot</groupId>
                   <artifactId>spring-boot-starter-test</artifactId>
@@ -91,11 +100,12 @@
                                 </configuration>
                         </plugin>
                         <plugin>
-                                <groupId>org.springframework.boot</groupId>
-                                <artifactId>spring-boot-maven-plugin</artifactId>
+                               <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-install-plugin</artifactId>
+                                <version>3.0.0-M1</version>
                         </plugin>
                 </plugins>
-        </build -->
+        </build-->
 
 
 </project>
