TSK-805 restructure AdapterManager's @Scheduled methods into separate classes

--- a/taskana-adapter-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-wildfly-example/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-#spring.profiles.active=@activatedProperties@
+spring.profiles.active=@activatedProperties@
 ######################################################################################
 ## Logging properties
 ######################################################################################
 # logging.level.org.springframework=DEBUG
-# logging.level.pro.taskana=DEBUG
 # logging.level.pro.taskana.adapter=DEBUG
 # logging.level.pro.taskana.adapter.*=DEBUG
 # logging.level.com.spring.ibatis=DEBUG
 # logging.level.com.spring.ibatis.*=DEBUG
 # logging.level.org.apache.ibatis=DEBUG
-
-
 logging.level.pro.taskana=INFO
 
 ######################################################################################
