TSK-821 set up tests for adapter-camunda-integration

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
                 <module>taskana-adapter-taskana-connector</module>
                 <module>taskana-adapter-sample</module>
                 <module>taskana-adapter-wildfly-example</module>
+                <module>taskana-adapter-test</module>
         </modules>
 </project>
