TSK 912,913,914 - Added TASKANATaskListener, example for task listener and outbox rest service

--- a/taskana-adapter-taskana-connector/pom.xml
+++ b/taskana-adapter-taskana-connector/pom.xml
@@ -88,7 +88,7 @@
                 <dependency>
                         <groupId>pro.taskana</groupId>
                         <artifactId>taskana-spring</artifactId>
-                        <version>1.0.8-SNAPSHOT</version>
+                        <version>1.1.0</version>
                 </dependency>
 
                 <dependency>
