--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,8 @@
                 <module>taskana-adapter-sample</module>
                 <module>taskana-adapter-wildfly-example</module>
                 <module>taskana-adapter-test</module>
+                <module>taskana-adapter-camunda-outbox-rest</module>
+                <module>taskana-adapter-camunda-tasklistener</module>
+            <module>taskana-adapter-tasklistener-example</module>
         </modules>
 </project>
