--- a/taskana-adapter-camunda-outbox-rest-spring-boot/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-outbox-rest-spring-boot/src/main/resources/application.properties
@@ -1,2 +1,12 @@
+######server-port########
+
 server.port=9090
+
+#####datasource#######
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.name=postgres
+spring.datasource.password=postgres
+
+
 
