--- a/taskana-adapter-camunda-outbox-rest-spring-boot/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-outbox-rest-spring-boot/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=9090
 #####datasource#######
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.name=postgres
+spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 
