-Renamed config class
-changed datasource name
-changed logging for task listener to slf4j

--- a/taskana-adapter-camunda-outbox-rest-spring-boot/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-outbox-rest-spring-boot/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=9090
 
 #####datasource#######
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
 
+taskana.adapter.camunda.outbox.rest.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
+taskana.adapter.camunda.outbox.rest.datasource.username=postgres
+taskana.adapter.camunda.outbox.rest.datasource.password=postgres
 
 
