--- a/taskana-adapter-camunda-outbox-rest-core/pom.xml
+++ b/taskana-adapter-camunda-outbox-rest-core/pom.xml
@@ -8,14 +8,21 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>war</packaging>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-    </properties>
-    <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
+
+    <artifactId>taskana-adapter-camunda-outbox-rest-core</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
     <dependencyManagement>
         <dependencies>
@@ -31,12 +38,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>jaxrs-api</artifactId>
-            <version>3.0.12.Final</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>org.camunda.spin</groupId>
             <artifactId>camunda-spin-core</artifactId>
             <version>1.6.7</version>
@@ -47,5 +48,6 @@
             <version>1.6.7</version>
         </dependency>
     </dependencies>
+
 
 </project>
