--- a/taskana-adapter-camunda-outbox-rest-spring-boot/pom.xml
+++ b/taskana-adapter-camunda-outbox-rest-spring-boot/pom.xml
@@ -35,9 +35,21 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+      		<version>1.4.197</version>
+      		<scope>test</scope>            
+        </dependency>        
+        <dependency>
             <groupId>pro.taskana</groupId>
             <artifactId>taskana-adapter-camunda-outbox-rest-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        
     </dependencies>
 </project>
