--- a/taskana-adapter-test/pom.xml
+++ b/taskana-adapter-test/pom.xml
@@ -71,56 +71,74 @@
 			<version>3.2.0</version>
 		</dependency> 
 
-		<!-- Adapter modules -->
-		<dependency>
-			<groupId>pro.taskana</groupId>
-			<artifactId>taskana-adapter</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>pro.taskana</groupId>
-			<artifactId>taskana-adapter-camunda-system-connector</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>pro.taskana</groupId>
-			<artifactId>taskana-adapter-taskana-connector</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+                <!-- Adapter modules -->
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-adapter</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-adapter-camunda-system-connector</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-adapter-taskana-connector</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
+               <dependency>
+                        <groupId>pro.taskana</groupId>
+                         <artifactId>taskana-adapter-camunda-tasklistener</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
 
-		<!-- Database Drivers -->
-		<dependency>
-			<groupId>com.ibm.db2.jcc</groupId>
-			<artifactId>db2jcc4</artifactId>
-			<version>11.1.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.2.5</version>
-		</dependency>
-	</dependencies>
-	
-	<!-- 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<layout>ZIP</layout>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	 -->
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                         <artifactId>taskana-adapter-camunda-outbox-rest-spring-boot</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
+
+                <!-- Database Drivers -->
+                <dependency>
+                        <groupId>com.ibm.db2.jcc</groupId>
+                        <artifactId>db2jcc4</artifactId>
+                        <version>11.1.1.1</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>42.2.5</version>
+                </dependency>
+                
+                <dependency>
+  					<groupId>uk.co.datumedge</groupId>
+					<artifactId>hamcrest-json</artifactId>
+					<version>0.2</version>
+					<!-- type>${project.packaging</type-->
+				</dependency>
+        </dependencies>
+
+        <!-- -->
+        <build>
+                <plugins>
+                        <plugin>
+                                <groupId>org.springframework.boot</groupId>
+                                <artifactId>spring-boot-maven-plugin</artifactId>
+                                <configuration>
+                                        <layout>ZIP</layout>
+                                </configuration>
+                                <executions>
+                                        <execution>
+                                                <goals>
+                                                        <goal>repackage</goal>
+                                                </goals>
+                                        </execution>
+                                </executions>
+                        </plugin>
+                </plugins>
+        </build>
+        <!-- -->
 
 	<!-- this repository is needed to fetch com.ibm.db2.jcc -->
 	<repositories>
